# Copyright 2021-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
  "builder",
  "libdd-alloc",
  "libdd-crashtracker",
  "libdd-crashtracker-ffi",
  "datadog-ffe",
  "datadog-ffe-ffi",
  "datadog-ipc",
  "datadog-ipc-macros",
  "libdd-library-config",
  "libdd-library-config-ffi",
  "datadog-live-debugger",
  "datadog-live-debugger-ffi",
  "libdd-profiling",
  "libdd-profiling-ffi",
  "libdd-profiling-protobuf",
  "datadog-profiling-replayer",
  "datadog-remote-config",
  "datadog-sidecar",
  "datadog-sidecar-ffi",
  "datadog-sidecar-macros",
  "libdd-trace-normalization",
  "libdd-trace-obfuscation",
  "libdd-trace-protobuf",
  "libdd-trace-utils",
  "libdd-trace-stats",
  "datadog-tracer-flare",
  "libdd-common",
  "libdd-common-ffi",
  "libdd-telemetry",
  "libdd-telemetry-ffi",
  "tools",
  "tools/cc_utils",
  "tools/sidecar_mockgen",
  "spawn_worker",
  "tests/spawn_from_lib",
  "bin_tests",
  "libdd-data-pipeline",
  "libdd-data-pipeline-ffi",
  "libdd-ddsketch",
  "libdd-ddsketch-ffi",
  "libdd-tinybytes",
  "libdd-dogstatsd-client",
  "libdd-log",
  "libdd-log-ffi",
]

# https://doc.rust-lang.org/cargo/reference/resolver.html
resolver = "2"

# These are used by many packages, but not all. For instance, the sidecar and
# serverless packages wanted to maintain their own version numbers. Some of
# their depenencies also remain under their own versioning.
#
# When bumping the Rust version, make sure that the version is less than or
# equal to latest Alpine Linux version, and also the latest RHEL 8.x and 9.x
# releases (not stream):
#  - https://rpms.remirepo.net/rpmphp/zoom.php?rpm=rust
# The RHEL restrictions are for the dd-trace-php repository. Someone in the
# community, Remi Collet, packages the extension for these systems.
[workspace.package]
rust-version = "1.84.1"
edition = "2021"
version = "24.0.1"
license = "Apache-2.0"
authors = ["Datadog Inc. <info@datadoghq.com>"]

[workspace.dependencies]
hyper = { version = "1.6", features = [
  "http1",
  "client",
], default-features = false }
hyper-util = { version = "0.1.10", features = [
  "http1",
  "client",
  "client-legacy",
] }
antithesis_sdk = "0.2.6"

[profile.dev]
debug = 2 # full debug info

[profile.release]
codegen-units = 1
debug = "line-tables-only"
lto = true
opt-level = "s"            # optimize for size

[profile.bench]
codegen-units = 1
debug = false
incremental = false
opt-level = 3

# https://camshaft.github.io/bolero/library-installation.html
[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# proptest pulls in a dependency on libm, which changes the runtime of some math functions
# so benchmarks are not measuring the same thing as the release build. This patch removes
# the default dependency on libm. A PR will be opened to proptest to make this optional.
proptest = { git = 'https://github.com/bantonsson/proptest.git', branch = "ban/avoid-libm-in-std" }
