# Copyright 2021-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
  "builder",
  "libdd-alloc",
  "libdd-profiling-heap-sampler",
  "libdd-profiling-heap-allocator",
  "libdd-profiling-heap-gotter",
  "libdd-profiling-heap-gotter-ffi",
  "libdd-crashtracker",
  "libdd-crashtracker-ffi",
  "datadog-ffe",
  "datadog-ffe-test-suite",
  "datadog-ffe-ffi",
  "datadog-ipc",
  "datadog-ipc-macros",
  "libdd-library-config",
  "libdd-library-config-ffi",
  "datadog-live-debugger",
  "datadog-live-debugger-ffi",
  "libdd-otel-thread-ctx",
  "libdd-otel-thread-ctx-ffi",
  "libdd-profiling",
  "libdd-profiling-ffi",
  "libdd-profiling-protobuf",
  "datadog-profiling-replayer",
  "libdd-remote-config",
  "datadog-sidecar",
  "datadog-sidecar-ffi",
  "datadog-sidecar-macros",
  "libdd-trace-normalization",
  "libdd-trace-obfuscation",
  "libdd-trace-protobuf",
  "libdd-trace-utils",
  "libdd-trace-stats",
  "libdd-tracer-flare",
  "libdd-capabilities",
  "libdd-capabilities-impl",
  "libdd-common",
  "libdd-common-ffi",
  "libdd-telemetry",
  "libdd-telemetry-ffi",
  "tools",
  "tools/cc_utils",
  "tools/sidecar_mockgen",
  "spawn_worker",
  "tests/spawn_from_lib",
  "bin_tests",
  "libdd-shared-runtime",
  "libdd-shared-runtime-ffi",
  "libdd-data-pipeline",
  "libdd-data-pipeline-ffi",
  "libdd-ddsketch",
  "libdd-ddsketch-ffi",
  "libdd-tinybytes",
  "libdd-dogstatsd-client",
  "libdd-healthplatform",
  "libdd-http-client",
  "libdd-agent-client",
  "libdd-log",
  "libdd-log-ffi",
  "libdd-sampling",
]

# https://doc.rust-lang.org/cargo/reference/resolver.html
resolver = "2"

# These are used by many packages, but not all. For instance, the sidecar and
# serverless packages wanted to maintain their own version numbers. Some of
# their depenencies also remain under their own versioning.
#
# When bumping the Rust version, make sure that the version is less than or
# equal to latest Alpine Linux version, and also the latest RHEL 8.x and 9.x
# releases (not stream):
#  - https://rpms.remirepo.net/rpmphp/zoom.php?rpm=rust
# The RHEL restrictions are for the dd-trace-php repository. Someone in the
# community, Remi Collet, packages the extension for these systems.
[workspace.package]
rust-version = "1.87.0"
edition = "2021"
version = "37.0.0"
license = "Apache-2.0"
authors = ["Datadog Inc. <info@datadoghq.com>"]

[workspace.dependencies]
arc-swap = "1.7.1"
hyper = { version = "1.6", features = [
  "http1",
  "client",
], default-features = false }
hyper-util = { version = "0.1.10", features = [
  "http1",
  "client",
  "client-legacy",
] }

[profile.dev]
debug = 2 # full debug info

[profile.release]
codegen-units = 1
debug = "line-tables-only"
lto = true
opt-level = "s"            # optimize for size

[profile.bench]
codegen-units = 1
debug = false
incremental = false
opt-level = 3

# https://camshaft.github.io/bolero/library-installation.html
[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[profile.panic-abort]
inherits = "dev"
panic = "abort"

[patch.crates-io]
# proptest pulls in a dependency on libm, which changes the runtime of some math functions
# so benchmarks are not measuring the same thing as the release build. This patch removes
# the default dependency on libm. A PR will be opened to proptest to make this optional.
proptest = { git = 'https://github.com/bantonsson/proptest.git', branch = "ban/avoid-libm-in-std" }


# Using `warn` instead of `deny` for iterating in local without blocking the build. Warnings fail CI anyway
[workspace.lints.clippy]
blanket_clippy_restriction_lints = "allow" # Required when enabling restriction as a group. Clippy itself warns about this
# Groups of lints
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# No panics
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
panic_in_result_fn = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
# TODO: Re-enable once every crate defines package keywords and categories.
cargo_common_metadata = "allow"
# TODO: Re-enable once the workspace dependency graph is deduplicated.
multiple_crate_versions = "allow"
# FIXME: rename libdd-crashtracker-ffi/use_webpki_roots feature to webpki_roots ?
redundant_feature_names = "allow"
# --- Whitelist ---
redundant_else = "allow" # less clear
option_if_let_else = "allow" # less clear
unreadable_literal = "allow" # annoying for all the ids in the codebase
cognitive_complexity = "allow" # using clippy::too_many_lines already

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
