[package]
name = "agent-info"
description = "Provides utilities to get config from the /info endpoint of an agent"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
ddcommon = { path = "../ddcommon" }
hyper = { version = "0.14", features = ["client"] }
serde = "1.0.209"
serde_json = "1.0.127"
tokio = "1.37.0"

[dev-dependencies]
datadog-trace-utils = { path = "../trace-utils", features = ["test-utils"] }
httpmock = "0.7.0"
tokio = { version = "1.37.0", features = ["time", "test-util"] }
