# Copyright 2021-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "bin_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18"
anyhow = "1.0"
current_platform = "0.2.0"
datadog-profiling = { path = "../profiling" }
datadog-crashtracker = { path = "../crashtracker" }
ddcommon = { path = "../ddcommon", default-features = false}
tempfile = "3.3" 
serde_json = { version = "1.0" }
hyper = { version = "0.14", default-features = false }

[[bin]]
name = "crashtracker_bin_test"

[[bin]]
name = "test_the_tests"
