# Unless explicitly stated otherwise all files in this repository are licensed under the Apache License Version 2.0.
# This product includes software developed at Datadog (https://www.datadoghq.com/). Copyright 2021-Present Datadog, Inc.

[package]
name = "build_common"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cbindgen = {version = "0.26"}
