[package]
name = "builder"
build = "build/main.rs"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
crashtracker = []
profiling = []
telemetry = []
data-pipeline = []
symbolizer = []
library-config = []
log = []

[lib]
bench = false
test = false
doctest = false

[dependencies]
anyhow = { version = "1.0" }
build_common = { path = "../build-common", features = ["cbindgen"] }
cmake = "0.1.50"
pico-args = "0.5.0"
tar = "0.4.41"
tools = { path = "../tools" }
toml = "0.8.19"
serde = "1.0.209"

[[bin]]
name = "release"
path = "src/bin/release.rs"
test = false
bench = false
