[package]
name = "builder"
build = "build/main.rs"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[features]
# Default features to release
default = [
  "crashtracker",
  "profiling",
  "telemetry",
  "data-pipeline",
  "symbolizer",
  "library-config",
  "log",
  "ddsketch",
  "ffe",
  "shared-runtime",
]
crashtracker = []
profiling = []
telemetry = []
data-pipeline = []
symbolizer = []
library-config = []
log = []
ddsketch = []
ffe = []
shared-runtime = []
otel-thread-ctx = []
regex-lite = ["libdd-common/regex-lite"]

[lib]
bench = false
test = false
doctest = false

[dependencies]
anyhow.workspace = true
build_common = { path = "../build-common", features = ["cbindgen"] }
cmake = "0.1.50"
pico-args = "0.5.0"
tar = "0.4.45"
tools = { path = "../tools" }
toml = "0.8.19"
serde.workspace = true
libdd-common = { path = "../libdd-common", default-features = false }

[[bin]]
name = "release"
path = "src/bin/release.rs"
test = false
bench = false
