# Copyright 2021-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-crashtracker-ffi"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
bench =false

[features]
default = ["cbindgen", "collector", "receiver"]
cbindgen = ["build_common/cbindgen"]
# Enables the in-process collection of crash-info
collector = []
# Enables the use of this library to receiver crash-info from a suitable collector
receiver = []

[build-dependencies]
build_common = { path = "../build-common" }

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4", default-features = false }
datadog-crashtracker = { path = "../crashtracker" }
ddcommon = { path = "../ddcommon" }
ddcommon-ffi = { path = "../ddcommon-ffi", default-features = false }
hyper = {version = "0.14", default-features = false}
symbolic-demangle = { version = "12.8.0", default-features = false, features = ["rust", "cpp", "msvc"] }
symbolic-common = "12.8.0"
