[package]
name = "datadog-crashtracker"
authors = ["Daniel Schwartz-Narbonne <dsn@datadoghq.com>"]
description = "Detects program crashes and reports them to datadog backend."
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]
bench = false

[[bin]]
name = "crashtracker-receiver"
path = "src/bin/crashtracker_receiver.rs"
bench = false

[features]
default = ["collector", "receiver"]
# Enables the in-process collection of crash-info
collector = []
# Enables the use of this library to receiver crash-info from a suitable collector
receiver = []

[target.'cfg(unix)'.dependencies]
# Should be kept in sync with the libdatadog symbolizer crate (also using blasesym)
blazesym = "0.2.0-rc.2"

[dependencies]
anyhow = "1.0"
backtrace = "0.3.74"
chrono = {version = "0.4", default-features = false, features = ["std", "clock", "serde"]}
ddcommon = { path = "../ddcommon" }
ddcommon-net1 = { path = "../ddcommon-net1" }
hyper = {version = "0.14", features = ["client", "backports", "deprecated"], default-features = false}
libc = "0.2"
nix = { version = "0.27.1", features = ["poll", "signal", "socket"] }
os_info = "3.7.0"
page_size = "0.6.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
uuid = { version = "1.4.1", features = ["v4", "serde"] }
ddtelemetry = {path = "../ddtelemetry"}
tokio = { version = "1.23", features = ["rt", "macros", "io-std", "io-util"] }
http = "0.2"
portable-atomic = { version = "1.6.0", features = ["serde"] }
rand = "0.8.5"
schemars = "0.8.21"

[dev-dependencies]
tempfile = { version = "3.3" }
