# Copyright 2021-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "data-pipeline-ffi"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[features]
default = ["cbindgen", "catch_panic"]
catch_panic = []
cbindgen = ["build_common/cbindgen", "libdd-common-ffi/cbindgen"]

[build-dependencies]
build_common = { path = "../build-common" }

[dev-dependencies]
httpmock = "0.8.0-alpha.1"
rmp-serde = "1.1.1"
libdd-trace-utils = { path = "../libdd-trace-utils" }

[dependencies]
data-pipeline = { path = "../data-pipeline" }
libdd-common-ffi = { path = "../libdd-common-ffi", default-features = false }
libdd-tinybytes = { path = "../libdd-tinybytes" }
tracing = { version = "0.1", default-features = false }
