[package]
name = "data-pipeline"
description = "Trace exporter package allowing sending data from datadog SDKs to the Trace Agent."
rust-version.workspace = true
edition.workspace = true
version= "1.0.0"
license.workspace = true
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
arc-swap = "1.7.1"
hyper = { workspace = true }
hyper-util = { workspace = true }
http = "1.0"
http-body-util = "0.1"
tracing = { version = "0.1", default-features = false }
rmp-serde = "1.1.1"
serde = "1.0.209"
serde_json = "1.0.127"
bytes = "1.4"
sha2 = "0.10"
either = "1.13.0"
tokio = { version = "1.23", features = [
    "rt",
    "test-util",
    "time",
], default-features = false }
uuid = { version = "1.10.0", features = ["v4"] }
tokio-util = "0.7.11"

ddcommon = { version = "1.0.0", path = "../libdd-common", package = "libdd-common", default-features = false }
ddtelemetry = { version = "1.0.0", path = "../libdd-telemetry", package = "libdd-telemetry", default-features = false }
datadog-trace-protobuf = { path = "../datadog-trace-protobuf" }
datadog-trace-stats = { version = "1.0.0", path = "../libdd-trace-stats", package = "libdd-trace-stats" }
datadog-trace-utils = { version = "1.0.0", path = "../libdd-trace-utils", package = "libdd-trace-utils", default-features = false }
datadog-ddsketch = { version = "1.0.0", path = "../libdd-sketch", package = "libdd-sketch" }
dogstatsd-client = { path = "../dogstatsd-client", default-features = false }
tinybytes = { path = "../tinybytes", features = [
    "bytes_string",
    "serialization",
] }

[lib]
bench = false

[dev-dependencies]
datadog-log = { path = "../datadog-log" }
clap = { version = "4.0", features = ["derive"] }
criterion = "0.5.1"
datadog-trace-utils = { path = "../libdd-trace-utils", package = "libdd-trace-utils", features = [
    "test-utils",
] }
httpmock = "0.8.0-alpha.1"
rand = "0.8.5"
regex = "1.5"
tempfile = "3.3.0"
tokio = { version = "1.23", features = [
    "rt",
    "time",
    "test-util",
], default-features = false }

[features]
default = ["https"]
https = [
    "ddcommon/https",
    "ddtelemetry/https",
    "datadog-trace-utils/https",
    "dogstatsd-client/https",
]
test-utils = []
