# Copyright 2021-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-crashtracker-ffi"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
bench = false
crate-type = ["lib", "cdylib"]

[[bin]]
name = "test_app"
path = "tests/test_app/src/main.rs"
bench = false
required-features = ["collector_windows"]

[features]
default = ["cbindgen", "collector", "demangler", "receiver"]
cbindgen = ["build_common/cbindgen"]
# Enables the in-process collection of crash-info
collector = []
collector_windows = []
demangler = ["dep:symbolic-demangle", "dep:symbolic-common"]
# Enables the use of this library to receiver crash-info from a suitable collector
receiver = []

[target.'cfg(windows)'.features]
default = ["collector_windows"]

[build-dependencies]
build_common = { path = "../build-common" }

[dependencies]
anyhow = "1.0"
datadog-crashtracker = { path = "../datadog-crashtracker" }
libdd-common = { path = "../libdd-common" }
libdd-common-ffi = { path = "../libdd-common-ffi", default-features = false }
symbolic-demangle = { version = "12.8.0", default-features = false, features = ["rust", "cpp", "msvc"], optional = true }
symbolic-common = { version = "12.8.0", default-features = false, optional = true }
function_name = "0.3.0"
libc = "0.2.167"
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.23", features = ["rt", "macros"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = ["Win32_System_Diagnostics_Debug", "Win32_System_ErrorReporting"] }

[dev-dependencies]
tempfile = "3.3"

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.59.0", features = ["Win32_System_LibraryLoader"] }
