# Copyright 2025-Present Datadog, Inc. https://www.datadoghq.com/
# SPDX-License-Identifier: Apache-2.0

[package]
name = "datadog-ffe-ffi"
edition.workspace = true
version = "0.1.0"
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[features]
default = ["cbindgen"]
cbindgen = ["build_common/cbindgen", "ddcommon-ffi/cbindgen"]

[build-dependencies]
build_common = { path = "../build-common" }

[dependencies]
datadog-ffe = { path = "../datadog-ffe" }
ddcommon-ffi = { path = "../ddcommon-ffi", default-features = false }

[dev-dependencies]
